# imager-bot

./: .env_example  Dockerfile  README.md  alembic.ini  compose_prod.yaml  compose_tests.yaml  init.sql  pyproject.toml
imager_bot/: config.py  init_db.py  main.py
imager_bot/database/: config.py
imager_bot/database/dao/: base.py  stats.py  users.py
imager_bot/database/models/: roles.py  stats.py  users.py
imager_bot/handlers/: __init__.py  response.py  screenshot.py  start.py  unknown.py
imager_bot/locales/: available.json
imager_bot/locales/en/: choose_lang.json  screenshot.json  start.json  unknown_command.json  whois.json
imager_bot/locales/ru/: choose_lang.json  screenshot.json  start.json  unknown_command.json  whois.json
imager_bot/migrations/: env.py
imager_bot/migrations/versions/: 66ca09dcce96_init.py  7cb28c6a8651_init.py  c372600970dd_init.py  f93cee7df73f_init.py
imager_bot/services/: driver.py  exceptions.py  screenshot.py  translator.py  types.py  unknown.py  users.py  utils.py  whois.py
